# app/interface/service/cmd/server/main.go
@@ -73,7 +73,7 @@ func main() {
 		panic(err)
 	}
 
-	app, cleanup, err := initApp(bc.ConduitInterface.Server, bc.Data, logger)
+	app, cleanup, err := initApp(bc.ConduitInterface.Server, bc.Data, bc.Biz, logger)
 	if err != nil {
 		panic(err)
 	}
